# ibus-table-tlim2

./: .bintray.json.in  .gitignore  .travis.yml  Makefile.am  README.md  autogen.sh  configure.ac
debian/: changelog  control  copyright  rules  watch
tables/: tlim2.txt  tlim2.txt.in
